Fix photo credit spacing

--- a/src/styles/components/blog/Post.module.scss
+++ b/src/styles/components/blog/Post.module.scss
@@ -50,6 +50,7 @@
     color: vars.$gray_lighter;
     font-style: italic;
     font-weight: 300;
+    margin-left: vars.$spacing_md * 3;
   }
 
   &__meta {
